--- a/watch/app/src/main/res/layout/activity_watch_upgrade.xml
+++ b/watch/app/src/main/res/layout/activity_watch_upgrade.xml
@@ -8,7 +8,7 @@
     android:background="#9ADFF4"
     tools:context=".upgradewatch">
 
-    <com.example.sibal.CircularAnimationView
+    <com.example.gaenari.CircularAnimationView
         android:id="@+id/circular_animation"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
