:sparkles: feat : 폰트수정

--- a/watch/app/src/main/res/layout/fragment_dfirst.xml
+++ b/watch/app/src/main/res/layout/fragment_dfirst.xml
@@ -11,7 +11,7 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/oagothic_medium"
+        android:fontFamily="@font/thejamsil_medium"
         android:text="남은거리"
         android:textColor="@color/whitegreen"
         android:textSize="19sp"
@@ -25,7 +25,7 @@
         android:id="@+id/달린거리"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/oagothic_extrabold"
+        android:fontFamily="@font/thejamsil_medium"
         android:text="0.9"
         android:textSize="16sp"
         android:textColor="@color/mainblue"
@@ -38,7 +38,7 @@
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/oagothic_medium"
+        android:fontFamily="@font/thejamsil_medium"
         android:text="meters"
         android:textColor="@color/mainblue"
         android:textSize="10sp"
@@ -56,7 +56,7 @@
         android:layout_alignParentTop="true"
         android:layout_marginTop="106dp"
         android:text="06:17:98"
-        android:fontFamily="@font/oagothic_extrabold"
+        android:fontFamily="@font/thejamsil_medium"
         android:textColor="@color/whitegreen"
         android:textSize="15sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -83,7 +83,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/달린거리"
-        android:fontFamily="@font/oagothic_extrabold"
+        android:fontFamily="@font/thejamsil_medium"
         android:text="150"
         android:textColor="@color/whitegreen"
         android:textSize="16sp"
