--- a/watch/app/src/main/res/layout/activity_countdown.xml
+++ b/watch/app/src/main/res/layout/activity_countdown.xml
@@ -19,7 +19,7 @@
         android:layout_height="wrap_content"
         android:text="타이틀"
         android:textColor="@color/whitegreen"
-        android:fontFamily="@font/oagothic_medium"
+        android:fontFamily="@font/thejamsil_medium"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -31,7 +31,7 @@
         android:id="@+id/countdownTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/oagothic_extrabold"
+        android:fontFamily="@font/thejamsil_medium"
         android:text="5"
         android:textColor="@color/black"
         android:textSize="90sp"
@@ -44,7 +44,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="초 뒤에 시작"
-        android:fontFamily="@font/oagothic_medium"
+        android:fontFamily="@font/thejamsil_medium"
         android:textColor="@color/black"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="parent"
