--- a/watch/app/src/main/res/layout/fragment_first.xml
+++ b/watch/app/src/main/res/layout/fragment_first.xml
@@ -32,7 +32,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="핸드폰 연동 확인"
-        android:fontFamily="@font/oagothic_medium"
+        android:fontFamily="@font/thejamsil_medium"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
