--- a/watch/app/src/main/res/layout/fragment_third.xml
+++ b/watch/app/src/main/res/layout/fragment_third.xml
@@ -20,7 +20,7 @@
         android:id="@+id/programDetails"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:fontFamily="@font/oagothic_medium"
+        android:fontFamily="@font/thejamsil_medium"
         android:gravity="center"
         android:text="프로그램 상세 정보"
         android:textColor="@color/whitegreen"
@@ -35,7 +35,7 @@
         android:id="@+id/programTitle"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:fontFamily="@font/oagothic_medium"
+        android:fontFamily="@font/thejamsil_medium"
         android:gravity="center"
         android:text="프로그램타이틀임"
         android:textColor="@color/lightyellow"
@@ -49,7 +49,7 @@
     <TextView
         android:layout_width="0dp"
         android:layout_height="20dp"
-        android:fontFamily="@font/oagothic_medium"
+        android:fontFamily="@font/thejamsil_medium"
         android:gravity="center"
         android:text="동그라미를 눌러 운동 시작"
         android:textColor="@color/whitegreen"
