--- a/watch/app/src/main/res/layout/item_program.xml
+++ b/watch/app/src/main/res/layout/item_program.xml
@@ -21,7 +21,7 @@
         android:id="@+id/menu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/oagothic_extrabold"
+        android:fontFamily="@font/thejamsil_medium"
         android:text="ㅎㅇㅎㅇ"
         android:textColor="@color/whitegreen"
         android:textSize="10sp"
