--- a/watch/app/src/main/res/layout/fragment_dfirst.xml
+++ b/watch/app/src/main/res/layout/fragment_dfirst.xml
@@ -7,11 +7,19 @@
     android:background="@color/black">
 
 
+    <com.example.gaenari.activity.dactivity.DCircleProgress
+        android:id="@+id/circleProgress"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent" />
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/thejamsil_medium"
+        android:fontFamily="@font/thejamsil_extrabold"
         android:text="남은거리"
         android:textColor="@color/whitegreen"
         android:textSize="19sp"
@@ -26,42 +34,51 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/thejamsil_medium"
-        android:text="0.9"
-        android:textSize="16sp"
+        android:text="0.65"
         android:textColor="@color/mainblue"
+        android:textSize="16sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/textView7"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.419"
+        app:layout_constraintEnd_toStartOf="@+id/textView7"
+        app:layout_constraintHorizontal_bias="0.93"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageView
+        android:layout_width="16dp"
+        android:layout_height="16dp"
+        android:src="@drawable/imgheart2"
+        app:layout_constraintBottom_toBottomOf="@+id/textView6"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.06"
+        app:layout_constraintStart_toEndOf="@+id/textView6" />
 
     <TextView
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/thejamsil_medium"
-        android:text="meters"
+        android:text="KM"
         android:textColor="@color/mainblue"
         android:textSize="10sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.043"
-        app:layout_constraintStart_toEndOf="@+id/달린거리"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.37" />
+        app:layout_constraintHorizontal_bias="0.07"
+        app:layout_constraintStart_toStartOf="@+id/guideline4"
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        app:layout_constraintVertical_bias="0.097" />
 
     <TextView
         android:id="@+id/달린시간"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="106dp"
-        android:text="06:17:98"
+        android:layout_marginTop="8dp"
         android:fontFamily="@font/thejamsil_medium"
+        android:text="00:00:00"
         android:textColor="@color/whitegreen"
         android:textSize="15sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
     <TextView
         android:id="@+id/속력"
@@ -69,14 +86,14 @@
         android:layout_height="wrap_content"
 
         android:layout_below="@id/달린시간"
-        android:layout_marginBottom="44dp"
-        android:text="Distance: 0.00 km"
+        android:layout_marginTop="8dp"
+        android:fontFamily="@font/thejamsil_medium"
+        android:text="GPS 수신중. . ."
         android:textColor="@color/whitegreen"
         android:textSize="15sp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.52"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/달린시간" />
 
     <TextView
         android:id="@+id/심박수"
@@ -88,8 +105,8 @@
         android:textColor="@color/whitegreen"
         android:textSize="16sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/textView6"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.363"
+        app:layout_constraintEnd_toStartOf="@+id/textView6"
+        app:layout_constraintHorizontal_bias="0.969"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
@@ -97,13 +114,20 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/달린거리"
-        android:layout_marginTop="88dp"
+        android:layout_marginTop="8dp"
         android:text="BPM"
         android:textColor="@color/whitegreen"
         android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.04"
-        app:layout_constraintStart_toEndOf="@+id/심박수"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintHorizontal_bias="0.02"
+        app:layout_constraintStart_toStartOf="@+id/guideline4"
+        app:layout_constraintTop_toBottomOf="@+id/textView7" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_end="97dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
