--- a/watch/app/src/main/res/layout/fragment_tfirst.xml
+++ b/watch/app/src/main/res/layout/fragment_tfirst.xml
@@ -7,11 +7,19 @@
     android:background="@color/black">
 
 
+    <com.example.gaenari.activity.tactivity.TCircleProgress
+        android:id="@+id/circleProgress"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent" />
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/thejamsil_medium"
+        android:fontFamily="@font/thejamsil_extrabold"
         android:text="남은시간"
         android:textColor="@color/whitegreen"
         android:textSize="19sp"
@@ -22,88 +30,90 @@
         app:layout_constraintVertical_bias="0.198" />
 
     <TextView
-        android:id="@+id/lesdis"
+        android:id="@+id/달린거리"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="7dp"
         android:fontFamily="@font/thejamsil_medium"
-        android:text="0.9"
+        android:text="0.65"
+        android:textColor="@color/mainblue"
         android:textSize="16sp"
-        android:textColor="@color/maingreem"
-        app:layout_constraintBaseline_toBaselineOf="@+id/textView7"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.419"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.503"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
+    <ImageView
+        android:layout_width="16dp"
+        android:layout_height="16dp"
+        android:src="@drawable/imgheart2"
+        app:layout_constraintBottom_toBottomOf="@+id/textView6"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.06"
+        app:layout_constraintStart_toEndOf="@+id/textView6" />
 
     <TextView
-        android:id="@+id/textView7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/thejamsil_medium"
-        android:text="KM"
-        android:textColor="@color/maingreem"
-        android:textSize="10sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.043"
-        app:layout_constraintStart_toEndOf="@+id/lesdis"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.37" />
-
-    <TextView
-        android:id="@+id/timeTextView"
+        android:id="@+id/달린시간"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="106dp"
-        android:text="06:17:98"
+        android:layout_marginTop="8dp"
         android:fontFamily="@font/thejamsil_medium"
+        android:text="00:00:00"
         android:textColor="@color/whitegreen"
         android:textSize="15sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
     <TextView
-        android:id="@+id/distanceTextView"
+        android:id="@+id/속력"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
-        android:layout_below="@id/timeTextView"
-        android:layout_marginBottom="44dp"
-        android:text="Distance: 0.00 km"
+        android:layout_below="@id/달린시간"
+        android:layout_marginTop="8dp"
+        android:fontFamily="@font/thejamsil_medium"
+        android:text="GPS 수신중. . ."
         android:textColor="@color/whitegreen"
         android:textSize="15sp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.52"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/달린시간" />
 
     <TextView
-        android:id="@+id/heartRateTextView"
+        android:id="@+id/심박수"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/distanceTextView"
+        android:layout_below="@id/달린거리"
         android:fontFamily="@font/thejamsil_medium"
         android:text="150"
         android:textColor="@color/whitegreen"
         android:textSize="16sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/textView6"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.363"
+        app:layout_constraintEnd_toStartOf="@+id/textView6"
+        app:layout_constraintHorizontal_bias="0.969"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/distanceTextView"
-        android:layout_marginTop="88dp"
+        android:layout_below="@id/달린거리"
+        android:layout_marginTop="8dp"
         android:text="BPM"
         android:textColor="@color/whitegreen"
         android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.04"
-        app:layout_constraintStart_toEndOf="@+id/heartRateTextView"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintHorizontal_bias="0.02"
+        app:layout_constraintStart_toStartOf="@+id/guideline4"
+        app:layout_constraintTop_toBottomOf="@+id/달린거리" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_end="97dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
