--- a/watch/app/src/main/res/layout/fragment_tsecond.xml
+++ b/watch/app/src/main/res/layout/fragment_tsecond.xml
@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="52dp"
-        android:text="타임!"
+        android:text="Pause"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
