--- a/watch/app/src/main/res/layout/activity_iactivity.xml
+++ b/watch/app/src/main/res/layout/activity_iactivity.xml
@@ -8,25 +8,21 @@
     android:background="@color/black"
     tools:context=".activity.iactivity.IActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:textColor="@color/whitegreen"
-        android:text="인터벌액티비티"
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/viewPager2"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent" />
+
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tabLayout2"
+        android:layout_width="85dp"
+        android:layout_height="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="title"
-        android:textColor="@color/whitegreen"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
+        app:layout_constraintTop_toTopOf="parent"
+        app:tabIndicatorColor="@color/maingreem"
+        app:tabGravity="center"
+        app:tabIndicatorHeight="4dp"
+        app:tabIndicatorFullWidth="false" />
 </androidx.constraintlayout.widget.ConstraintLayout>
