:sparkles: feat : 연동 인증 화면 구성

--- a/watch/app/src/main/res/layout/fragment_first.xml
+++ b/watch/app/src/main/res/layout/fragment_first.xml
@@ -6,17 +6,6 @@
     android:layout_height="match_parent"
     android:background="@drawable/round_background">
 
-
-<!--    <ImageView-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="10dp"-->
-<!--        android:layout_marginTop="16dp"-->
-<!--        android:src="@drawable/first3"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintHorizontal_bias="0.504"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toTopOf="parent" />-->
-
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="30dp"
@@ -31,11 +20,22 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="핸드폰 연동 확인"
         android:fontFamily="@font/thejamsil_medium"
+        android:text="핸드폰 연동 확인"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/auth_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="40dp"
+        android:text="핸드폰 연동"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.505"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
