--- a/watch/app/src/main/res/layout/fragment_tfirst.xml
+++ b/watch/app/src/main/res/layout/fragment_tfirst.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/black">
+    android:background="@drawable/actiback5">
 
 
     <com.example.gaenari.activity.tactivity.TCircleProgress
@@ -15,6 +15,43 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent" />
+
+    <TextView
+        android:id="@+id/체크1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="56dp"
+        android:text="ㅎㅇㅎㅇ"
+        android:textColor="@color/lightyellow"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/체크2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="ㅎㅇㅎㅇ"
+        android:textColor="@color/lightyellow"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.114"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/체크1" />
+
+    <TextView
+        android:id="@+id/체크3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:text="ㅎㅇㅎㅇ"
+        android:textColor="@color/lightyellow"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/체크2" />
+
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
@@ -44,6 +81,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <ImageView
+        android:id="@+id/imageView2"
         android:layout_width="16dp"
         android:layout_height="16dp"
         android:src="@drawable/imgheart2"
