:sparkles: feat : 시간 액티비티 화면 구성

--- a/watch/app/src/main/res/layout/activity_auth.xml
+++ b/watch/app/src/main/res/layout/activity_auth.xml
@@ -7,18 +7,33 @@
         android:id="@+id/auth_id"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/black"
+        android:background="@drawable/authback98"
         tools:context=".activity.main.AuthActivity">
 
         <TextView
             android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="6dp"
             android:fontFamily="@font/thejamsil_medium"
-            android:text="들어가야함"
+            android:text="핸드폰에 표시된"
             android:textColor="@color/white"
-            android:textSize="20sp"
+            android:textSize="10sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.474"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.189" />
+        <TextView
+            android:id="@+id/title2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            android:fontFamily="@font/thejamsil_medium"
+            android:text="인증번호를 입력해주세요"
+            android:textColor="@color/white"
+            android:textSize="10sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.474"
@@ -29,11 +44,12 @@
         <Button
             android:id="@+id/authBtn"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="36dp"
+            android:layout_height="35dp"
+            android:layout_marginBottom="32dp"
+            android:background="@drawable/authbtn"
             android:fontFamily="@font/thejamsil_medium"
-            android:text="인증"
-            android:textSize="15sp"
+            android:text="인증하기"
+            android:textSize="13sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -43,15 +59,16 @@
             android:id="@+id/input_authcode"
             android:layout_width="124dp"
             android:layout_height="38dp"
-            android:layout_marginBottom="84dp"
+            android:layout_marginBottom="80dp"
             android:ems="10"
             android:inputType="number"
-            android:textColor="@color/white"
             android:textAlignment="center"
+            android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/title" />
+            app:layout_constraintTop_toBottomOf="@+id/title"
+            app:layout_constraintVertical_bias="1.0" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
