--- a/watch/app/src/main/res/layout/fragment_second.xml
+++ b/watch/app/src/main/res/layout/fragment_second.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/secondback">
+    android:background="@drawable/mainback98">
 
 <!--    <ImageView-->
 <!--        android:layout_width="wrap_content"-->
@@ -61,8 +61,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
-        android:fontFamily="sans-serif-medium"
         android:text="0"
+        android:fontFamily="@font/thejamsil_medium"
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
