--- a/watch/app/src/main/res/layout/fragment_tsecond.xml
+++ b/watch/app/src/main/res/layout/fragment_tsecond.xml
@@ -4,16 +4,27 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/black">
+    android:background="@drawable/timeback97">
 
     <!-- 달리기 종료 버튼 -->
+    <com.example.gaenari.CircularProgressButton
+        android:id="@+id/circularProgressButton"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:padding="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/pauseButton"
-        android:layout_width="wrap_content"
+        android:layout_width="130dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="52dp"
-        android:text="Pause"
+        android:layout_marginTop="48dp"
+        android:background="@drawable/resumebutton"
+        android:text="일시정지"
+        android:fontFamily="@font/thejamsil_medium"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -21,14 +32,16 @@
 
     <Button
         android:id="@+id/stopButton"
-        android:layout_width="wrap_content"
+        android:layout_width="130dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="44dp"
-        android:text="Stop Running"
+        android:layout_marginBottom="36dp"
+        android:background="@drawable/stopbutton"
+        android:text="운동 종료하기"
+        android:fontFamily="@font/thejamsil_medium"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.513"
+        app:layout_constraintHorizontal_bias="0.508"
         app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
