--- a/watch/app/src/main/res/values/colors.xml
+++ b/watch/app/src/main/res/values/colors.xml
@@ -22,5 +22,6 @@
     <color name="resultgreen">#16F01F</color>
     <color name="resultred">#F61E1E</color>
     <color name="dd2">#FFC979</color>
+    <color name="dd5">#00FFFFFF</color>
 
 </resources>
