--- a/watch/app/src/main/res/drawable/btn_green.xml
+++ b/watch/app/src/main/res/drawable/btn_green.xml
@@ -2,10 +2,8 @@
 <shape
     xmlns:android="http://schemas.android.com/apk/res/android">
     <solid
-        android:color="#22427C"/>
+        android:color="@color/maingreem"/>
     <corners
         android:radius="500dp"/>
-    <stroke
-        android:width="1.5dp"
-        android:color="@color/white"/>
+
 </shape>
