--- a/watch/app/src/main/res/drawable/btn_orange.xml
+++ b/watch/app/src/main/res/drawable/btn_orange.xml
@@ -2,10 +2,8 @@
 <shape
     xmlns:android="http://schemas.android.com/apk/res/android">
     <solid
-        android:color="#F18533"/>
+        android:color="@color/mainyellow"/>
     <corners
-        android:radius="30dp"/>
-    <stroke
-        android:width="1.5dp"
-        android:color="@color/white"/>
+        android:radius="500dp"/>
+
 </shape>
